  GPU kernels, and OpenMP tasks in profiling.
- Allocation metrics were lost on MPI RMA window allocation functions.
- Honor `CUDA_VISIBLE_DEVICES` when creating CUDA location names.
- Improve error handling of calls to `realpath` on kernel files in
  `/proc` or `/sys` when recording I/O activities.
- Allow to select 'runtime' wrapping of OpenCL in the instrumenter again.

Compatibility:

- Score-P now requires an MPI implementation which is compliant with
  at least the MPI 2.2 standard and provides the `USE mpi` Fortran
  bindings, instead of the discouraged `INCLUDE 'mpif.h'`.
  Note that `USE mpi_f08` is not yet supported and Score-P will
  abort during MPI initialization if this is detected.

------------------- Released version 6.0 -----------------------------

Major features:

- Support for recording I/O activities: Calls to POSIX I/O and MPI-I/O
  are wrapped and meta data about individual I/O operations is
  recorded. Whereas MPI-I/O events are recorded by default, POSIX I/O
  recording needs to be activated using the instrumenter option
  --io=posix.

Features and improvements:

- Created separate enable group for request handling functions in MPI.
  MPI functions dealing with the completion of non-blocking requests
  (i.e., the Test/Wait family of calls) are no longer part of the P2P
  enable group and moved to a separate enable group, which is enabled
  or disabled automatically by the Score-P runtime system.
- Adapted remapper specification to reflect that Test/Wait functionality
  is no longer specific to point-to-point communication.
- Added support for the Clang compiler suite. Select via
  `--with-nocross-compiler-suite=clang`. Additionally experimental
  support for macOS based systems was added, but needs to be enabled
  with `--enable-experimental-platform` explicitly.
- Bulding with the PGI compiler suite now selects the 'pgfortran'
  compiler for F77 and FC. Added support for the PGI/LLVM variant.